# gnss-clock-detector

./: .env.example  .gitignore  .token_cache  AGENTS.md  DATABASE_FIX_GUIDE.md  DEPLOYMENT.md  POSTGRESQL_SETUP.md  README.md  TROUBLESHOOTING.md  date_test.html  fix_constraint.py  fix_dates.js  migrate_database.py  pyproject.toml  render-build.sh  start.sh  test_clk.py  test_clk_r05.py  wsgi.py
.claude/: settings.local.json
.github/workflows/: ci.yml  etl-daily.yml  weekly_health.yml
_trash/: check_deployment.py  commit_files.sh  patch_etl.py  test.db  update_etl_ftp.py
_trash/fails_status/: BDS_260419.oe  Const_260418.glo  Const_260418.gps  GLO_260419.oe  GPS_260101.oe  QZS_260419.oe  Stark_260418.hlt
docs/: ADR.md  API_REFERENCE.md  ARCHITECTURE.md  DATA_SOURCES.md  ETL_PIPELINE.md  HARNESS_SPEC.md  MODULE_MAP.md  SCIENTIFIC_ARTICLE.md
scripts/: check_deps.py  reset_metadata.py  structural_tests.py
src/gnss_clock/: __init__.py  __main__.py  analytics.py  app.py  config.py  detect_outliers.py  detector.py  etl.py  ftp_client.py  gps_time.py  models.py  nasa_client.py  parsers.py  status_parsers.py  utils.py
src/gnss_clock/static/: index.html  index_v2.html  satellite.html
tests/: test_config.py  test_detector.py  test_etl.py  test_ftp_client.py  test_gps_time.py  test_nasa_client.py  test_parsers.py  test_satellite_route.py  test_status_parsers.py
