[project]
name = "gnss-clock"
version = "0.1.0"
description = "GNSS satellite clock anomaly detector — GLONASS-IAC FTP → SQLite → Flask API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "sqlalchemy>=2.0",
    "numpy>=1.26",
    "unlzw3>=0.2.1",          # Unix LZW decompress для .Z файлов
    "werkzeug>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "ruff>=0.4",
]

[project.scripts]
gnss-etl = "gnss_clock.etl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnss_clock"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
