[project]
name = "gnss-clock"
version = "0.3.0"
description = "GNSS satellite clock anomaly detector — GLONASS-IAC FTP + NASA CDDIS → SQLite → Flask API"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "flask-sqlalchemy>=3.1",
    "sqlalchemy>=2.0",
    "numpy>=2.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "unlzw3>=0.2.1",
    "werkzeug>=3.1",
    "gunicorn>=23.0",
    "psycopg2-binary>=2.9",   # PostgreSQL driver (optional, для production)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "responses>=0.25",         # mock HTTP для тестов NASA-клиента
    "ruff>=0.4",
]

[project.scripts]
gnss-etl = "gnss_clock.etl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnss_clock"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
